Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-131913

Incorrect QTimeZone documentation

XMLWordPrintable

    • All
    • 1
    • 2bdce9748 (dev), 66da88f42 (6.9), dff71f52e (6.8), 91418ea3b (tqtc/lts-6.5)
    • Foundation Sprint 121

      In the documentation for QTimeZone, it mentions QTimeZone::fromSecondsAfterUtc(offsetSeconds), but this function doesn’t exist. I believe it is actually referring to QTimeZone::fromSecondsAheadOfUtc(int offset)

      https://doc.qt.io/qt-6/qtimezone.html#QTimeZone-5

       

        For Gerrit Dashboard: QTBUG-131913
        # Subject Branch Project Status CR V

            Eddy Edward Welbourne
            chakib Chakib Boutaghane
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                Estimated:
                Original Estimate - 5 minutes
                5m
                Remaining:
                Remaining Estimate - 5 minutes
                5m
                Logged:
                Time Spent - Not Specified
                Not Specified

                  There are no open Gerrit changes